Fix request button icon and spacing on data export page

--- a/frontend/src/app/data-export/data-export.component.scss
+++ b/frontend/src/app/data-export/data-export.component.scss
@@ -13,6 +13,7 @@ mat-card {
 }
 
 #submitButton {
+  margin-top: 30px;
   margin-left: 20%;
   width: 60%;
 }
